[WFCORE-5452] Sync updates to TLS configuration and minor changes for Java 17.